--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 		<div class="popup-content">
 			<button id="closePopup"> Close </button>
 			<h2><b><ins>CV</ins></b></h2>
-			<h3><b>Education</b></h3>
+			<h3><b><ins>Education</ins></b></h3>
 				<dl>
-					<dt>University Wisconsin Madison</dt>
+					<dt><b>University Wisconsin Madison</b></dt>
 						<dd>- M.S. GIS Development</dd>
-					<dt>South Dakota School of Mines</dt>
+					<dt><b>South Dakota School of Mines</b></dt>
 						<dd>- B.S. Geology</dd>
 						<dd>- Minors: Geospatial Technology & Environmental Science</dd>
 				</dl>
-			<h3><b>Research</b></h3>
+			<h3><b><ins>Research</ins></b></h3>
 			<p class="Sources">Morris, A.G., 2022, Geospatial analysis of apatite fission track
 			and apatite (U-Th)/He in relation to elevated topography along active faults, Geological
 			Society of America Abstracts with Programs. Vol. 54, No. 2, doi: 10.1130/abs/2022CD-374114 </p>
-			<h3><b>Skills and Courses</b></h3>
+			<h3><b><ins>Skills and Courses</ins></b></h3>
 			<ul>
 				<li> GIS; Remote Sensing; Geo-Spatial Databases; Geo-Statistics; ArcGIS Pro; ArcMap</li>
 				<li> Geologic Field Work; Applied Geomorphology; Sedimentary Depositional Basins; Thermochronology</li>
@@ -101,7 +101,7 @@
 				<li>Programming Languages: Python, SQL, C, HTML, CSS, JS</li>
 				<li>Programming Libraries: ESRI JS API, Leaflet, D3, Boostrap</li>
 			</ul>
-			<h3><b>Experience</b></h3>
+			<h3><b><ins>Experience</ins></b></h3>
 			<ul>
 				<li> 2022-2023: Geological Field Camp - SD Mines</li>
 				<li> 2016: Montbrook Fossil Dig - FL Museum of Natural History</li>
